force-app/main/default/objects/Performance_Metric__c/fields/Metric_Date__c.field-meta.xml
<CustomField>
    <fullName>Metric_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>