force-app/main/default/objects/Performance_Metric__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversion</fullName>
                <default>true</default>
                <label>Conversion</label>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>