force-app/main/default/objects/Performance_Metric__c/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <label>Resolution Time</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>