force-app/main/default/objects/Performance_Metric__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User Link</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PerformanceMetrics</relationshipName>
    <type>Lookup</type>
    <required>true</required>
</CustomField>