force-app/main/default/objects/Performance_Metric__c/fields/Workload__c.field-meta.xml
<CustomField>
    <fullName>Workload__c</fullName>
    <label>Workload</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>